@@ -4,6 +4,7 @@ package mcjty.rftoolsbase.setup;
 import mcjty.rftoolsbase.client.RenderWorldLastEventHandler;
 import mcjty.rftoolsbase.keys.KeyBindings;
 import mcjty.rftoolsbase.keys.KeyInputHandler;
+import net.minecraftforge.client.event.RegisterKeyMappingsEvent;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
 
@@ -12,6 +13,9 @@ public class ClientSetup {
     public static void init(FMLClientSetupEvent e) {
         MinecraftForge.EVENT_BUS.addListener(RenderWorldLastEventHandler::tick);
         MinecraftForge.EVENT_BUS.register(new KeyInputHandler());
-        KeyBindings.init();
+    }
+
+    public static void registerKeyBinds(RegisterKeyMappingsEvent event) {
+        KeyBindings.init(event);
     }
 }
