@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed keybindings
+
 1.19.1-4.0.1:
 - Fix for 1.19.1
 
